--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
+    <ImageButton
+        android:id="@id/btnCall"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/sym_action_call"
+        android:background="@android:color/transparent"
+        app:layout_constraintEnd_toEndOf="@id/imgProfile"
+        app:layout_constraintBottom_toBottomOf="@id/imgProfile"
+        android:onClick="monClick"/>
     <Button
         android:id="@id/btnSave"
         android:layout_width="match_parent"
@@ -87,6 +96,7 @@
         app:layout_constraintBottom_toTopOf="@id/btnSave"
         android:gravity="top"
         />
+
 
 
 
