--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -15,8 +15,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
         />
+    <ImageButton
+        android:id="@id/btnCall"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/sym_action_call"
+        android:background="@android:color/transparent"
+        app:layout_constraintEnd_toEndOf="@id/imgProfile"
+        app:layout_constraintBottom_toBottomOf="@id/imgProfile"
+        android:onClick="monClick"/>
     <Button
         android:id="@id/btnSave"
         android:layout_width="0dp"
@@ -89,6 +97,24 @@
         app:layout_constraintBottom_toTopOf="@id/btnSave"
         android:gravity="top"
         />
+    <ListView
+        android:id="@id/listNotes"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/txtReq"
+        app:layout_constraintTop_toBottomOf="@id/txtClasse"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+    <ImageButton
+        android:id="@id/btnAddNote"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_input_add"
+        android:background="@android:color/transparent"
+        app:layout_constraintEnd_toEndOf="@id/listNotes"
+        app:layout_constraintBottom_toBottomOf="@id/listNotes"
+        android:onClick="monClick"/>
 
 
 
